--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/BLazzeD21/UMTE-Calendar#readme",
   "dependencies": {
     "dotenv": "^16.4.7",
+    "ical-generator": "^8.1.1",
     "playwright": "^1.50.1"
   }
 }
