--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "ical-generator": "^8.1.1",
+    "node-schedule": "^2.1.1",
     "playwright": "^1.50.1"
   }
 }
