--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-  "name": "umte-calendar",
-  "version": "1.1.1",
-  "description": "UTME Portal Integration with Apple Calendar",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "build": "npx tsc",
-    "dev": "node build/index.js",
-    "start": "npx tsc && pm2 start build/index.js --name UMTE-schedule --time",
-    "stop": "pm2 stop UMTE-schedule",
-    "reload": "pm2 reload UMTE-schedule",
-    "delete": "pm2 delete UMTE-schedule"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BLazzeD21/UMTE-Calendar.git"
-  },
-  "author": "BLazzeD",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/BLazzeD21/UMTE-Calendar/issues"
-  },
-  "homepage": "https://github.com/BLazzeD21/UMTE-Calendar#readme",
-  "dependencies": {
-    "dotenv": "^16.4.7",
-    "ical-generator": "^8.1.1",
-    "node-schedule": "^2.1.1",
-    "playwright": "^1.50.1",
-    "pm2": "^5.4.3"
-  },
-  "devDependencies": {
-    "@types/node": "^22.13.1",
-    "typescript": "^5.7.3"
-  }
+	"name": "umte-calendar",
+	"version": "1.1.1",
+	"description": "UTME Portal Integration with Apple Calendar",
+	"main": "index.js",
+	"type": "module",
+	"scripts": {
+		"prettier": "npx prettier . --write",
+		"build": "npx tsc",
+		"dev": "node build/index.js",
+		"start": "npx tsc && pm2 start build/index.js --name UMTE-schedule --time",
+		"stop": "pm2 stop UMTE-schedule",
+		"reload": "pm2 reload UMTE-schedule",
+		"delete": "pm2 delete UMTE-schedule"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/BLazzeD21/UMTE-Calendar.git"
+	},
+	"author": "BLazzeD",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/BLazzeD21/UMTE-Calendar/issues"
+	},
+	"homepage": "https://github.com/BLazzeD21/UMTE-Calendar#readme",
+	"dependencies": {
+		"dotenv": "^16.4.7",
+		"ical-generator": "^8.1.1",
+		"node-schedule": "^2.1.1",
+		"playwright": "^1.50.1",
+		"pm2": "^5.4.3"
+	},
+	"devDependencies": {
+		"@types/node": "^22.13.1",
+		"prettier": "3.5.0",
+		"typescript": "^5.7.3"
+	}
 }
