feat: enable the cluster mode

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"prettier": "npx prettier . --write",
 		"build": "npx tsc",
 		"dev": "node build/index.js",
-		"start": "npx tsc && pm2 start build/index.js --name UMTE-schedule --time",
+		"start": "npx tsc && pm2 start build/index.js --name UMTE-schedule --time -i max",
 		"stop": "pm2 stop UMTE-schedule",
 		"reload": "pm2 reload UMTE-schedule",
 		"delete": "pm2 delete UMTE-schedule"
