chore: set absolute paths and change `moduleResolution` and `module`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
 	"include": ["src/**/*"],
 	"compilerOptions": {
-		"baseUrl": "./",
+		"paths": {
+      "@/*": ["./*"],
+    },
+		"baseUrl": "./src",
 		"rootDir": "./src",
 		"outDir": "./build",
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
 		"resolveJsonModule": true,
 		"target": "ES6",
 		"strict": false,
-		"allowJs": true,
+		"allowJs": false,
 		"checkJs": false,
 		"alwaysStrict": false,
-		"removeComments": true
+		"removeComments": true,
 	}
 }
