--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
 		"pm2": "^5.4.3"
 	},
 	"devDependencies": {
+		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
 		"@types/node": "^22.13.1",
-		"prettier": "3.5.0",
+		"prettier": "^3.5.0",
 		"typescript": "^5.7.3"
 	}
 }
