--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"prettier": "npx prettier . --write",
 		"build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
 		"dev": "npm run build && node build/index.js",
-		"start": "npm run build && pm2 start build/index.js --name UMTE-schedule --time -i max",
+		"start": "npm run build && pm2 start build/index.js --name UMTE-schedule --time -i 1",
 		"stop": "pm2 stop UMTE-schedule",
 		"reload": "pm2 reload UMTE-schedule",
 		"delete": "pm2 delete UMTE-schedule"
