--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"prettier": "npx prettier . --write",
 		"build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
 		"dev": "npm run build && node build/index.js",
 		"start": "npm run build && pm2 start build/index.js --name UMTE-schedule --time -i 1",
 		"stop": "pm2 stop UMTE-schedule",
 		"reload": "pm2 reload UMTE-schedule",
-		"delete": "pm2 delete UMTE-schedule"
+		"delete": "pm2 delete UMTE-schedule",
+		"pre-commit": "npm run type && lint-staged",
+		"lint": "npx eslint --fix",
+		"type": "tsc --noEmit",
+		"prettier": "npx prettier . --write",
+		"prepare": "husky"
 	},
 	"repository": {
 		"type": "git",
@@ -25,6 +29,7 @@
 	"homepage": "https://github.com/BLazzeD21/UMTE-Calendar#readme",
 	"dependencies": {
 		"dotenv": "^16.4.7",
+		"husky": "^9.1.7",
 		"ical-generator": "^8.1.1",
 		"node-ical": "^0.20.1",
 		"node-schedule": "^2.1.1",
@@ -33,10 +38,24 @@
 		"tsc-alias": "^1.8.10"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.26.0",
 		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
 		"@types/node": "^22.13.1",
 		"@types/node-schedule": "^2.1.7",
+		"eslint": "^9.26.0",
+		"globals": "^16.0.0",
+		"lint-staged": "^15.5.1",
 		"prettier": "^3.5.0",
-		"typescript": "^5.7.3"
+		"typescript": "^5.7.3",
+		"typescript-eslint": "^8.31.1"
+	},
+	"lint-staged": {
+		"*.{ts,tsx}": [
+			"eslint --fix",
+			"prettier --write"
+		],
+		"*.{js,jsx,json,md,yml,yaml}": [
+			"prettier --write"
+		]
 	}
 }
