chore: npm i grammy

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"homepage": "https://github.com/BLazzeD21/UMTE-Calendar#readme",
 	"dependencies": {
 		"dotenv": "^16.4.7",
+		"grammy": "^1.38.2",
 		"husky": "^9.1.7",
 		"ical-generator": "^8.1.1",
 		"node-ical": "^0.20.1",
